# PACE2024-TLPZ

./: CMakeLists.txt  LICENSE  PACE2024TLPZ.tar  PACE2024TLPZ.tgz  README.md  include.7z  src.7z
include/: count_crossings.h  heuristics.h  pacegraph.h  segtree.h  signal_handling.h  simulated_annealing.h
include/header-only/: arrays.h  exp.h  inverse_normal_cdf.h  mem_track.h  random.h
src/: count_crossings.c  heuristics.c  main.c  pacegraph.c  segtree.c  signal_handling.c  simulated_annealing.c
